--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ html, body {
   .container .background {
     width: 100%;
     height: 100%;
-    background: url("/img/TheSecretLife_Bg.jpg") 0 0 no-repeat;
     background-position: 20%;
     background-size: 315%;
     -webkit-filter: blur(5px);
@@ -35,10 +34,17 @@ html, body {
     -ms-filter: blur(5px);
     filter: blur(15px);
     position: absolute; }
+    .container .background.bg01 {
+      background: url("../img/TheSecretLife_Bg.jpg") 0 0 no-repeat; }
+    .container .background.bg02 {
+      background: url("../img/BigHero6_Bg.jpg") 0 0 no-repeat; }
   .container .iphone {
     width: 497px;
     height: 880px;
     position: relative;
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
     box-shadow: 0 3px 10px 5px rgba(0, 0, 0, 0.55); }
     .container .iphone .status-bar {
       width: 100%;
@@ -157,10 +163,10 @@ html, body {
       width: 100%;
       height: 310px; }
       .container .tricket .tricket-banner.life {
-        background: url("/img/banner01.png") 0 0 no-repeat;
+        background: url("../img/banner01.png") 0 0 no-repeat;
         background-size: 100%; }
       .container .tricket .tricket-banner.hero {
-        background: url("/img/banner02.png") 0 0 no-repeat;
+        background: url("../img/banner02.png") 0 0 no-repeat;
         background-size: 100%; }
     .container .tricket .tricket-data {
       width: 100%;
